# pacs

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
alembic/: env.py
alembic/versions/: f02f2cfaffda_created_received_data_table.py
sample_data/1/: 0000.dcm  0001.dcm  0005.dcm  0006.dcm  0007.dcm  0008.dcm  0011.dcm  0012.dcm  0014.dcm  0015.dcm
sample_data/2/: IM-0015-0004.dcm  IM-0015-0005.dcm  IM-0015-0006.dcm  IM-0015-0008.dcm  IM-0015-0009.dcm  IM-0015-0010.dcm  IM-0015-0012.dcm
sample_data/3/SE000001/: 1_0001.dcm  1_0002.dcm  1_0005.dcm  1_0007.dcm  1_0009.dcm  1_0010.dcm  1_0011.dcm  1_0015.dcm
sample_data/3/SE000002/: 1_0002.dcm  1_0008.dcm  1_0009.dcm  1_0011.dcm  1_0012.dcm  1_0013.dcm
sample_data/3/SE000003/: 1_0000.dcm  1_0002.dcm  1_0004.dcm  1_0005.dcm  1_0007.dcm  1_0009.dcm  1_0010.dcm  1_0011.dcm  1_0012.dcm  1_0013.dcm
sample_data/3/SE000004/: 1_0001.dcm  1_0002.dcm  1_0004.dcm  1_0005.dcm  1_0006.dcm  1_0013.dcm  1_0014.dcm  1_0015.dcm  1_0016.dcm  1_0018.dcm  1_0019.dcm  1_0023.dcm  1_0024.dcm  1_0026.dcm  1_0027.dcm  1_0028.dcm  1_0029.dcm  1_0030.dcm
src/: settings.py
src/automation_orthanc/: Dockerfile  fill_pacs.py
src/automation_pac_client/: fill_pacs.py
src/floy/: main.py
src/floy/db/: db.py
src/floy/db/handlers/: received_data_handler.py
src/floy/models/: base_model.py  received_data.py
src/floy/routers/: series.py
src/floy/services/: received_data_service.py
src/pac_client/: client.py  dataset_collector.py  scp.py  series_dispatcher.py
src/pac_client/sample_data/1/: 0002.dcm  0003.dcm  0004.dcm  0009.dcm  0010.dcm  0013.dcm  0016.dcm
src/pac_client/sample_data/2/: IM-0015-0001.dcm  IM-0015-0002.dcm  IM-0015-0003.dcm  IM-0015-0007.dcm  IM-0015-0011.dcm  IM-0015-0013.dcm
src/pac_client/sample_data/3/SE000001/: 1_0000.dcm  1_0003.dcm  1_0004.dcm  1_0006.dcm  1_0008.dcm  1_0012.dcm  1_0013.dcm  1_0014.dcm  1_0016.dcm
src/pac_client/sample_data/3/SE000002/: 1_0000.dcm  1_0001.dcm  1_0003.dcm  (+7 more)
(+20 files in other folders)
